--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9"
+    "@types/node": "^20.5.9",
+    "@vercel/node": "^3.0.3",
+    "alice-types": "^1.3.0"
   }
 }
