--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@doist/todoist-api-typescript": "^2.1.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "remove-markdown": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
+    "@types/remove-markdown": "^0.3.1",
     "@vercel/node": "^3.0.3",
     "alice-types": "^1.3.0"
   }
