--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@types/remove-markdown": "^0.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vercel/node": "^3.0.3",
-    "alice-types": "^1.3.0"
+    "alice-types": "^1.3.0",
+    "eslint": "^8.49.0"
   }
 }
