--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "ES2021"
     ],
     "allowSyntheticDefaultImports": true, // To provide backwards compatibility, Node.js allows you to import most CommonJS packages with a default import. This flag tells TypeScript that it's okay to use import on CommonJS modules.
-    "resolveJsonModule": false, // ESM doesn't yet support JSON modules.
+    "resolveJsonModule": true,
     "jsx": "react",
     "declaration": true,
     "pretty": true,
@@ -29,6 +29,6 @@
     "noEmitOnError": true,
     "useDefineForClassFields": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
