--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@doist/todoist-api-typescript": "^2.1.2",
     "dotenv": "^16.3.1",
+    "i18next": "^23.5.1",
+    "i18next-icu": "^2.3.0",
+    "intl-messageformat": "^10.5.2",
     "remove-markdown": "^0.5.0"
   },
   "devDependencies": {
