--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Install modules
         run: npm i
       - name: Run ESLint
-        run: eslint .
+        run: npx eslint .
